Provato a definire il perudo_package e iniziato datapath

--- a/Perudo.qsf
+++ b/Perudo.qsf
@@ -45,3 +45,5 @@ set_global_assignment -name LAST_QUARTUS_VERSION 12.0
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
+set_global_assignment -name VHDL_FILE perudo_package.vhd
+set_global_assignment -name VHDL_FILE Perudo_Datapath.vhd
