--- a/Simulazione componenti/Perudo_Datapath.qsf
+++ b/Simulazione componenti/Perudo_Datapath.qsf
@@ -18,14 +18,14 @@
 #
 # Quartus II 32-bit
 # Version 12.0 Build 178 05/31/2012 SJ Web Edition
-# Date created = 16:18:30  December 02, 2018
+# Date created = 16:24:43  February 27, 2019
 #
 # -------------------------------------------------------------------------- #
 #
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		Perudo_assignment_defaults.qdf
+#		Perudo_Datapath_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -36,23 +36,15 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone II"
-set_global_assignment -name DEVICE EP2C20F484C7
-set_global_assignment -name TOP_LEVEL_ENTITY Perudo
+set_global_assignment -name FAMILY "Cyclone IV GX"
+set_global_assignment -name DEVICE auto
+set_global_assignment -name TOP_LEVEL_ENTITY Perudo_Datapath
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 12.0
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:18:30  DECEMBER 02, 2018"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:24:43  FEBRUARY 27, 2019"
 set_global_assignment -name LAST_QUARTUS_VERSION 12.0
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name VHDL_FILE vga_controller.vhd
-set_global_assignment -name VHDL_FILE Perudo_View.vhd
 set_global_assignment -name VHDL_FILE perudo_package.vhd
 set_global_assignment -name VHDL_FILE Perudo_Datapath.vhd
-set_global_assignment -name VHDL_FILE Perudo_Controller.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
