--- a/Simulazione componenti/Perudo_Datapath.qsf
+++ b/Simulazione componenti/Perudo_Datapath.qsf
@@ -49,4 +49,5 @@ set_global_assignment -name VHDL_FILE perudo_package.vhd
 set_global_assignment -name VHDL_FILE Perudo_Datapath.vhd
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
