--- a/Perudo.qsf
+++ b/Perudo.qsf
@@ -56,3 +56,4 @@ set_global_assignment -name VHDL_FILE perudo_package.vhd
 set_global_assignment -name VHDL_FILE Perudo_Datapath.vhd
 set_global_assignment -name VHDL_FILE Perudo_Controller.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
