--- a/Prova Singole Componenti/SimoFicca.qsf
+++ b/Prova Singole Componenti/SimoFicca.qsf
@@ -18,14 +18,14 @@
 #
 # Quartus II 32-bit
 # Version 12.0 Build 178 05/31/2012 SJ Web Edition
-# Date created = 16:24:43  February 27, 2019
+# Date created = 18:10:30  September 19, 2019
 #
 # -------------------------------------------------------------------------- #
 #
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		Perudo_Datapath_assignment_defaults.qdf
+#		SimoFicca_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -38,20 +38,18 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C20F484C7
-set_global_assignment -name TOP_LEVEL_ENTITY Perudo_Datapath
+set_global_assignment -name TOP_LEVEL_ENTITY SimoFicca
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 12.0
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:24:43  FEBRUARY 27, 2019"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "18:10:30  SEPTEMBER 19, 2019"
 set_global_assignment -name LAST_QUARTUS_VERSION 12.0
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 2147039 -section_id Top
-set_global_assignment -name VHDL_FILE perudo_package.vhd
-set_global_assignment -name VHDL_FILE Perudo_Datapath.vhd
+set_global_assignment -name VHDL_FILE ../../../Downloads/Led_blink.vhd
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_L1 -to clk
+set_location_assignment PIN_R20 -to led
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
-set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
-set_global_assignment -name MISC_FILE "C:/Users/giova/Desktop/Perudo_FPGA/Simulazione componenti/Perudo_Datapath.dpf"
-set_location_assignment PIN_L1 -to CLOCK
